--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Title of the document</title>
+	<title>Title of the document 1</title>
 	<meta charset="UTF-8">
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -11,7 +11,7 @@
 			<input type="text" name="field_1" id="field_1" /><br />
 			<input type="button" name="button_1" id="button_1" value="Click me" /><br />
 		</form>
-		
+		kasjdh kjsd   ksajhdkasdhkasdh kjasdh kasdjkashd kj he he he
 		Hello HTML 1<br />
 		Hello HTML 2<br />
 		Hello HTML 3<br />
@@ -46,13 +46,6 @@
 		Hello HTML<br />
 		Hello HTML<br />
 		Hello HTML<br />
-		Hello HTML<br />
-		Hello HTML<br />
-		Hello HTML<br />
-		Hello HTML<br />
-		Hello HTML<br />
-		Hello HTML<br />
-		<span class="scroller">Hello HTML</span><br />
 		Hello HTML<br />
 		Hello HTML<br />
 		Hello HTML<br />
