--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,7 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-asd
-  <title>Pacificonis - Form-elements</title>
+  <title>Pacificonis - Form-elements - 2</title>
   <link rel="stylesheet" href="http://91.234.35.26/pacificonis-admin/v1.0.1/land/l1/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://91.234.35.26/pacificonis-admin/v1.0.1/land/l1/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
   <link rel="stylesheet" href="http://91.234.35.26/pacificonis-admin/v1.0.1/land/l1/bower_components/animate.css/animate.min.css">
